go-app/k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stark-industries-go-service
spec:
  selector:
    app: stark-industries-go
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
